# Putnam1992A6

./: README.md  main.py  renderer.py  requirements.txt  simulation.py
LaTeX/: main.tex
PythonFiles/: PureSimulation.py  renderer.py  visualize_tetrahedron.py
RewriteInC++/: CMakeLists.txt  convex_hull.cpp  convex_hull.h  main.cpp
